# network-ids-

./: Cargo.toml  README.md
crates/network-ids-api/: Cargo.toml
crates/network-ids-api/src/: main.rs
crates/network-ids-cli/: Cargo.toml
crates/network-ids-cli/src/: main.rs
crates/network-ids-core/: Cargo.toml
crates/network-ids-core/src/: capture.rs  detection.rs  features.rs  lib.rs  ml.rs  types.rs  utils.rs
web/: package.json  svelte.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: types.ts
web/src/lib/components/: AIAssistantPage.svelte  AISecurityCenter.svelte  AlertDetailModal.svelte  AlertFeed.svelte  AnalyticsPage.svelte  BlocklistManager.svelte  ConnectionDetailsTable.svelte  IPLookup.svelte  NotificationSettings.svelte  ProtocolChart.svelte  SavedFiltersPanel.svelte  SettingsPage.svelte  StatsGrid.svelte  StatusCard.svelte  ThreatChart.svelte  ThreatMapDeckGL.svelte  TimeSeriesChart.svelte  TopTalkers.svelte
web/src/lib/services/: ai.ts  ip-lookup.ts
web/src/lib/stores/: ai.ts  alertStatus.ts  history.ts  navigation.ts  notifications.ts  savedFilters.ts  theme.ts  websocket.ts
web/src/routes/: +layout.svelte  +page.svelte
