[workspace]
members = [
    "crates/network-ids-core",
    "crates/network-ids-api", 
    "crates/network-ids-cli"
]
resolver = "2"

[workspace.dependencies]
# Core ML and networking - using latest stable versions available on crates.io
candle-core = "0.9.1"
candle-nn = "0.9.1"
# Note: candle-nn 0.9.1 includes optimizer functionality, no separate optimizers crate needed

tokio = { version = "1.42", features = ["full"] }
pcap = "2.0"
pnet = "0.35"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Web framework and API
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
hyper = "1.0"

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
toml = "0.8"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
parking_lot = "0.12"

# ML and math utilities
ndarray = "0.16"
statrs = "0.17"
rayon = "1.10"
num-traits = "0.2"

# Explicitly pin rand to match candle-core expectations
rand = "0.8.5"

reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
tokio-tungstenite = "0.24"
futures-util = "0.3"
colored = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

# Note: Using rand = "0.8.5" across workspace to maintain compatibility with candle-core
# Note: Optimizers are built into candle-nn 0.9.1, no separate crate needed