[package]
name = "network-ids-cli"
version = "0.1.0"
edition = "2021"  # Changed from 2024 to avoid candle-core compatibility issues
description = "Command-line interface for Network IDS"

[[bin]]
name = "network-ids"
path = "src/main.rs"

[dependencies]
# Local dependencies
network-ids-core = { path = "../network-ids-core" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
dotenv = { workspace = true }
reqwest = { workspace = true }
chrono =  { workspace = true }